; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/async/extr_sqlite3async.c_sqlite3async_initialize.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/async/extr_sqlite3async.c_sqlite3async_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, i32 }
%struct.TYPE_5__ = type { i32 }

@SQLITE_OK = common dso_local global i32 0, align 4
@async_vfs = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@SQLITE_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3async_initialize(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @SQLITE_OK, align 4
  store i32 %7, i32* %5, align 4
  %8 = load i8*, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @async_vfs, i32 0, i32 0), align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %36

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = call %struct.TYPE_5__* @sqlite3_vfs_find(i8* %11)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %6, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = icmp ne %struct.TYPE_5__* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = call i64 (...) @async_os_initialize()
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %15, %10
  %19 = load i32, i32* @SQLITE_ERROR, align 4
  store i32 %19, i32* %5, align 4
  br label %35

20:                                               ; preds = %15
  %21 = load i32, i32* @SQLITE_OK, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @sqlite3_vfs_register(%struct.TYPE_6__* @async_vfs, i32 %22)
  store i32 %23, i32* %5, align 4
  %24 = icmp ne i32 %21, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = call i32 (...) @async_os_shutdown()
  br label %34

27:                                               ; preds = %20
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %29 = bitcast %struct.TYPE_5__* %28 to i8*
  store i8* %29, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @async_vfs, i32 0, i32 0), align 8
  %30 = load i8*, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @async_vfs, i32 0, i32 0), align 8
  %31 = bitcast i8* %30 to %struct.TYPE_5__*
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @async_vfs, i32 0, i32 1), align 8
  br label %34

34:                                               ; preds = %27, %25
  br label %35

35:                                               ; preds = %34, %18
  br label %36

36:                                               ; preds = %35, %2
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local %struct.TYPE_5__* @sqlite3_vfs_find(i8*) #1

declare dso_local i64 @async_os_initialize(...) #1

declare dso_local i32 @sqlite3_vfs_register(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @async_os_shutdown(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
